getting data from db added (version 1) for location-info

--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -5,7 +5,7 @@ include _includes/sharedHTMLfunctions
 block content
   .row.page-header
     .col-lg-12
-      h1= title
+      h1= name
   .row
     .col-xs-12.col-md-9
       .row
@@ -32,5 +32,5 @@ block content
                     .col-xs-12
                       p=review.comment
     .col-xs-12.col-md-3
-      p.lead #{footnote1}
-      p #{footnote2}
+      //p.lead #{footnote1}
+     // p #{footnote2}
